# wham

./: .editorconfig  .gitignore  CITATION.cff  CODE_OF_CONDUCT.adoc  CONTRIBUTING.adoc  Dockerfile  HOWTORUN.adoc  README.adoc  SECURITY.adoc  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
app/: main.py
app/api/v1/routes/: users.py
app/db/: mongo_client.py
docs/: OpenAPI.adoc  architecture.adoc  intents.adoc
